<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/splash2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="112dp"
        android:text="@string/individual_name"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="168dp"
        android:text="@string/individual_gender"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/photo0"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="300dp"
            android:background="#FFFFFF"
            android:text="@string/individual_text1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:text="@string/individual_text2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:text="@string/individual_text3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:text="@string/individual_text4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:text="@string/my_posts"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttom1"
            android:text="edit" />

    </LinearLayout>

    <!--    <ImageView-->
    <!--        android:id="@+id/h_back"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>