<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

<!--        photo -->
        <ImageView
            android:id="@+id/touxiang"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gender"
                android:textColor="#808080"
                android:textSize="10sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/individual_text1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/individual_text2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:paddingTop="12dp"
            android:text="@string/individual_text3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="0.1dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="left"
                android:paddingTop="12dp"
                android:text="@string/individual_text4"
                android:textSize="20sp" />
<!--            <ImageButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/icon_man_check" />-->
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/bt6"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#FFFFFF"-->
<!--            android:gravity="left"-->
<!--            android:paddingTop="12dp"-->
<!--            android:text="@string/text4"-->
<!--            android:textSize="20sp" />-->
    </LinearLayout>


    <Button
            android:id="@+id/individual_button"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttom1"
            android:gravity="center"
            android:text="return"
            android:textSize="20sp" />


</LinearLayout>